// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSIllustration Heading Only 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-illustration slds-illustration_small"
  >
    <div
      className="slds-text-longform"
    >
      <h3
        className="slds-text-heading_medium"
      >
        Lorem ipsum dolor
      </h3>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSIllustration Heading and Message 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-illustration slds-illustration_small"
  >
    <div
      className="slds-text-longform"
    >
      <h3
        className="slds-text-heading_medium"
      >
        Lorem ipsum dolor
      </h3>
      <p
        className="slds-text-body_regular"
      >
        Lorem ipsum dolor sit amet, consectetur
      </p>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSIllustration Large Image and Text 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-illustration slds-illustration_large"
  >
    <svg
      aria-hidden="true"
      className="slds-illustration__svg"
      name="no-access"
      style={
        Object {
          "height": "400px",
        }
      }
    >
      <use
        xlinkHref="/assets/images/illustrations/empty-state-no-access.svg#no-access"
      />
    </svg>
    <div
      className="slds-text-longform"
    >
      <h3
        className="slds-text-heading_medium"
      >
        Lorem ipsum dolor
      </h3>
      <p
        className="slds-text-body_regular"
      >
        Lorem ipsum dolor sit amet, consectetur
      </p>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSIllustration Message Only 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-illustration slds-illustration_small"
  >
    <div
      className="slds-text-longform"
    >
      <p
        className="slds-text-body_regular"
      >
        Lorem ipsum dolor sit amet, consectetur
      </p>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSIllustration Small Image and Text 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-illustration slds-illustration_small"
  >
    <svg
      aria-hidden="true"
      className="slds-illustration__svg"
      name="no-access"
      style={Object {}}
    >
      <use
        xlinkHref="/assets/images/illustrations/empty-state-no-access.svg#no-access"
      />
    </svg>
    <div
      className="slds-text-longform"
    >
      <h3
        className="slds-text-heading_medium"
      >
        Lorem ipsum dolor
      </h3>
      <p
        className="slds-text-body_regular"
      >
        Lorem ipsum dolor sit amet, consectetur
      </p>
    </div>
  </div>
</div>
`;
